--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,15 +1,17 @@
 backend:
   name: github
   repo: nanandann/pcloudy-docs   # your GitHub repo
-  branch: main                   # your main branch
+  branch: main   
+  #base_url: https://api.netlify.com
+  #auth_endpoint: auth?provider=github&scope=repo&site_id=1c39c10d-d3a5-4e68-815b-2cb0517a66e2       # your main branch
 
-media_folder: "static/img"
-public_folder: "/img"
+media_folder: static/img
+public_folder: /img
 
 collections:
-  - name: "docs"
-    label: "Documentation"
-    folder: "docs"
+  - name: docs
+    label: Documentation
+    folder: docs
     create: true
     slug: "{{slug}}"
     fields:
